--- a/paper/1-catalog/refs.bib
+++ b/paper/1-catalog/refs.bib
@@ -2,12 +2,138 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Adrian Price-Whelan at 2018-02-07 17:04:34 -0500 
+%% Created for Adrian Price-Whelan at 2018-02-20 14:50:53 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{Kipping:2013,
+	Adsnote = {Provided by the SAO/NASA Astrophysics Data System},
+	Adsurl = {http://adsabs.harvard.edu/abs/2013MNRAS.434L..51K},
+	Archiveprefix = {arXiv},
+	Author = {{Kipping}, D.~M.},
+	Date-Added = {2018-02-20 19:50:38 +0000},
+	Date-Modified = {2018-02-20 19:50:38 +0000},
+	Doi = {10.1093/mnrasl/slt075},
+	Eprint = {1306.4982},
+	Journal = {\mnras},
+	Keywords = {methods: statistical, planets and satellites: general},
+	Month = jul,
+	Pages = {L51-L55},
+	Primaryclass = {astro-ph.EP},
+	Title = {{Parametrizing the exoplanet eccentricity distribution with the Beta distribution}},
+	Volume = 434,
+	Year = 2013,
+	Bdsk-Url-1 = {http://dx.doi.org/10.1093/mnrasl/slt075}}
+
+@article{El-Badry:2018,
+	Adsnote = {Provided by the SAO/NASA Astrophysics Data System},
+	Adsurl = {http://adsabs.harvard.edu/abs/2018MNRAS.tmp..238E},
+	Archiveprefix = {arXiv},
+	Author = {{El-Badry}, K. and {Ting}, Y.-S. and {Rix}, H.-W. and {Quataert}, E. and {Weisz}, D.~R. and {Cargile}, P. and {Conroy}, C. and {Hogg}, D.~W. and {Bergemann}, M. and {Liu}, C.},
+	Date-Added = {2018-02-20 19:00:46 +0000},
+	Date-Modified = {2018-02-20 19:00:48 +0000},
+	Doi = {10.1093/mnras/sty240},
+	Eprint = {1711.08793},
+	Journal = {\mnras},
+	Keywords = {binaries: spectroscopic, Galaxy: stellar content, methods: data analysis},
+	Month = jan,
+	Primaryclass = {astro-ph.SR},
+	Title = {{Discovery and Characterization of 3000+ Main-Sequence Binaries from APOGEE Spectra}},
+	Year = 2018,
+	Bdsk-Url-1 = {https://dx.doi.org/10.1093/mnras/sty240}}
+
+@article{Nidever:2015,
+	Adsnote = {Provided by the SAO/NASA Astrophysics Data System},
+	Adsurl = {http://adsabs.harvard.edu/abs/2015AJ....150..173N},
+	Archiveprefix = {arXiv},
+	Author = {{Nidever}, D.~L. and {Holtzman}, J.~A. and {Allende Prieto}, C. and {Beland}, S. and {Bender}, C. and {Bizyaev}, D. and {Burton}, A. and {Desphande}, R. and {Fleming}, S.~W. and {Garc{\'{\i}}a P{\'e}rez}, A.~E. and {Hearty}, F.~R. and {Majewski}, S.~R. and {M{\'e}sz{\'a}ros}, S. and {Muna}, D. and {Nguyen}, D. and {Schiavon}, R.~P. and {Shetrone}, M. and {Skrutskie}, M.~F. and {Sobeck}, J.~S. and {Wilson}, J.~C.},
+	Date-Added = {2018-02-20 17:58:53 +0000},
+	Date-Modified = {2018-02-20 17:58:55 +0000},
+	Doi = {10.1088/0004-6256/150/6/173},
+	Eid = {173},
+	Eprint = {1501.03742},
+	Journal = {\aj},
+	Keywords = {galaxies: abundances, galaxies: halos, galaxies: kinematics and dynamics, Local Group, methods: data analysis, techniques: image processing},
+	Month = dec,
+	Pages = {173},
+	Primaryclass = {astro-ph.IM},
+	Title = {{The Data Reduction Pipeline for the Apache Point Observatory Galactic Evolution Experiment}},
+	Volume = 150,
+	Year = 2015,
+	Bdsk-Url-1 = {https://dx.doi.org/10.1088/0004-6256/150/6/173}}
+
+@article{Gunn:2006,
+	Adsnote = {Provided by the SAO/NASA Astrophysics Data System},
+	Adsurl = {http://adsabs.harvard.edu/abs/2006AJ....131.2332G},
+	Author = {{Gunn}, J.~E. and {Siegmund}, W.~A. and {Mannery}, E.~J. and {Owen}, R.~E. and {Hull}, C.~L. and {Leger}, R.~F. and {Carey}, L.~N. and {Knapp}, G.~R. and {York}, D.~G. and {Boroski}, W.~N. and {Kent}, S.~M. and {Lupton}, R.~H. and {Rockosi}, C.~M. and {Evans}, M.~L. and {Waddell}, P. and {Anderson}, J.~E. and {Annis}, J. and {Barentine}, J.~C. and {Bartoszek}, L.~M. and {Bastian}, S. and {Bracker}, S.~B. and {Brewington}, H.~J. and {Briegel}, C.~I. and {Brinkmann}, J. and {Brown}, Y.~J. and {Carr}, M.~A. and {Czarapata}, P.~C. and {Drennan}, C.~C. and {Dombeck}, T. and {Federwitz}, G.~R. and {Gillespie}, B.~A. and {Gonzales}, C. and {Hansen}, S.~U. and {Harvanek}, M. and {Hayes}, J. and {Jordan}, W. and {Kinney}, E. and {Klaene}, M. and {Kleinman}, S.~J. and {Kron}, R.~G. and {Kresinski}, J. and {Lee}, G. and {Limmongkol}, S. and {Lindenmeyer}, C.~W. and {Long}, D.~C. and {Loomis}, C.~L. and {McGehee}, P.~M. and {Mantsch}, P.~M. and {Neilsen}, Jr., E.~H. and {Neswold}, R.~M. and {Newman}, P.~R. and {Nitta}, A. and {Peoples}, Jr., J. and {Pier}, J.~R. and {Prieto}, P.~S. and {Prosapio}, A. and {Rivetta}, C. and {Schneider}, D.~P. and {Snedden}, S. and {Wang}, S.-i.},
+	Date-Added = {2018-02-20 17:56:19 +0000},
+	Date-Modified = {2018-02-20 17:56:21 +0000},
+	Doi = {10.1086/500975},
+	Eprint = {astro-ph/0602326},
+	Journal = {\aj},
+	Keywords = {Surveys, Telescopes},
+	Month = apr,
+	Pages = {2332-2359},
+	Title = {{The 2.5 m Telescope of the Sloan Digital Sky Survey}},
+	Volume = 131,
+	Year = 2006,
+	Bdsk-Url-1 = {https://dx.doi.org/10.1086/500975}}
+
+@article{Majewski:2017,
+	Adsnote = {Provided by the SAO/NASA Astrophysics Data System},
+	Adsurl = {http://adsabs.harvard.edu/abs/2017AJ....154...94M},
+	Archiveprefix = {arXiv},
+	Author = {{Majewski}, S.~R. and {Schiavon}, R.~P. and {Frinchaboy}, P.~M. and {Allende Prieto}, C. and {Barkhouser}, R. and {Bizyaev}, D. and {Blank}, B. and {Brunner}, S. and {Burton}, A. and {Carrera}, R. and {Chojnowski}, S.~D. and {Cunha}, K. and {Epstein}, C. and {Fitzgerald}, G. and {Garc{\'{\i}}a P{\'e}rez}, A.~E. and {Hearty}, F.~R. and {Henderson}, C. and {Holtzman}, J.~A. and {Johnson}, J.~A. and {Lam}, C.~R. and {Lawler}, J.~E. and {Maseman}, P. and {M{\'e}sz{\'a}ros}, S. and {Nelson}, M. and {Nguyen}, D.~C. and {Nidever}, D.~L. and {Pinsonneault}, M. and {Shetrone}, M. and {Smee}, S. and {Smith}, V.~V. and {Stolberg}, T. and {Skrutskie}, M.~F. and {Walker}, E. and {Wilson}, J.~C. and {Zasowski}, G. and {Anders}, F. and {Basu}, S. and {Beland}, S. and {Blanton}, M.~R. and {Bovy}, J. and {Brownstein}, J.~R. and {Carlberg}, J. and {Chaplin}, W. and {Chiappini}, C. and {Eisenstein}, D.~J. and {Elsworth}, Y. and {Feuillet}, D. and {Fleming}, S.~W. and {Galbraith-Frew}, J. and {Garc{\'{\i}}a}, R.~A. and {Garc{\'{\i}}a-Hern{\'a}ndez}, D.~A. and {Gillespie}, B.~A. and {Girardi}, L. and {Gunn}, J.~E. and {Hasselquist}, S. and {Hayden}, M.~R. and {Hekker}, S. and {Ivans}, I. and {Kinemuchi}, K. and {Klaene}, M. and {Mahadevan}, S. and {Mathur}, S. and {Mosser}, B. and {Muna}, D. and {Munn}, J.~A. and {Nichol}, R.~C. and {O'Connell}, R.~W. and {Parejko}, J.~K. and {Robin}, A.~C. and {Rocha-Pinto}, H. and {Schultheis}, M. and {Serenelli}, A.~M. and {Shane}, N. and {Silva Aguirre}, V. and {Sobeck}, J.~S. and {Thompson}, B. and {Troup}, N.~W. and {Weinberg}, D.~H. and {Zamora}, O.},
+	Date-Added = {2018-02-20 17:54:12 +0000},
+	Date-Modified = {2018-02-20 17:54:13 +0000},
+	Doi = {10.3847/1538-3881/aa784d},
+	Eid = {94},
+	Eprint = {1509.05420},
+	Journal = {\aj},
+	Keywords = {Galaxy: abundances, Galaxy: evolution, Galaxy: formation, Galaxy: kinematics and dynamics, Galaxy: stellar content, Galaxy: structure},
+	Month = sep,
+	Pages = {94},
+	Primaryclass = {astro-ph.IM},
+	Title = {{The Apache Point Observatory Galactic Evolution Experiment (APOGEE)}},
+	Volume = 154,
+	Year = 2017,
+	Bdsk-Url-1 = {https://dx.doi.org/10.3847/1538-3881/aa784d}}
+
+@article{Abolfathi:2017,
+	Adsnote = {Provided by the SAO/NASA Astrophysics Data System},
+	Adsurl = {http://adsabs.harvard.edu/abs/2017arXiv170709322A},
+	Archiveprefix = {arXiv},
+	Author = {{Abolfathi}, B. and {Aguado}, D.~S. and {Aguilar}, G. and {Allende Prieto}, C. and {Almeida}, A. and {Tasnim Ananna}, T. and {Anders}, F. and {Anderson}, S.~F. and {Andrews}, B.~H. and {Anguiano}, B. and et al.},
+	Date-Added = {2018-02-20 17:52:48 +0000},
+	Date-Modified = {2018-02-20 17:52:58 +0000},
+	Eprint = {1707.09322},
+	Journal = {ArXiv e-prints},
+	Keywords = {Astrophysics - Astrophysics of Galaxies, Astrophysics - Instrumentation and Methods for Astrophysics},
+	Month = jul,
+	Title = {{The Fourteenth Data Release of the Sloan Digital Sky Survey: First Spectroscopic Data from the extended Baryon Oscillation Spectroscopic Survey and from the second phase of the Apache Point Observatory Galactic Evolution Experiment}},
+	Year = 2017}
+
+@article{Kraus:2008,
+	Adsnote = {Provided by the SAO/NASA Astrophysics Data System},
+	Adsurl = {http://adsabs.harvard.edu/abs/2008ApJ...679..762K},
+	Archiveprefix = {arXiv},
+	Author = {{Kraus}, A.~L. and {Ireland}, M.~J. and {Martinache}, F. and {Lloyd}, J.~P.},
+	Date-Added = {2018-02-20 17:14:31 +0000},
+	Date-Modified = {2018-02-20 17:14:34 +0000},
+	Doi = {10.1086/587435},
+	Eid = {762-782},
+	Eprint = {0801.2387},
+	Journal = {\apj},
+	Keywords = {binaries: general, stars: low-mass, brown dwarfs, stars: pre-main sequence},
+	Month = may,
+	Pages = {762-782},
+	Title = {{Mapping the Shores of the Brown Dwarf Desert. I. Upper Scorpius}},
+	Volume = 679,
+	Year = 2008,
+	Bdsk-Url-1 = {https://dx.doi.org/10.1086/587435}}
 
 @article{Moe:2017,
 	Adsnote = {Provided by the SAO/NASA Astrophysics Data System},
@@ -226,28 +352,13 @@
 	Year = 2016,
 	Bdsk-Url-1 = {http://dx.doi.org/10.1093/mnras/stv2830}}
 
-@article{Majewski:2015,
-	Adsnote = {Provided by the SAO/NASA Astrophysics Data System},
-	Adsurl = {http://adsabs.harvard.edu/abs/2015arXiv150905420M},
-	Archiveprefix = {arXiv},
-	Author = {{Majewski}, S.~R. and {Schiavon}, R.~P. and {Frinchaboy}, P.~M. and {Allende Prieto}, C. and {Barkhouser}, R. and {Bizyaev}, D. and {Blank}, B. and {Brunner}, S. and {Burton}, A. and {Carrera}, R. and {Chojnowski}, S.~D. and {Cunha}, K. and {Epstein}, C. and {Fitzgerald}, G. and {Garcia Perez}, A.~E. and {Hearty}, F.~R. and {Henderson}, C. and {Holtzman}, J.~A. and {Johnson}, J.~A. and {Lam}, C.~R. and {Lawler}, J.~E. and {Maseman}, P. and {Meszaros}, S. and {Nelson}, M. and {Coung Nguyen}, D. and {Nidever}, D.~L. and {Pinsonneault}, M. and {Shetrone}, M. and {Smee}, S. and {Smith}, V.~V. and {Stolberg}, T. and {Skrutskie}, M.~F. and {Walker}, E. and {Wilson}, J.~C. and {Zasowski}, G. and {Anders}, F. and {Basu}, S. and {Beland}, S. and {Blanton}, M.~R. and {Bovy}, J. and {Brownstein}, J.~R. and {Carlberg}, J. and {Chaplin}, W. and {Chiappini}, C. and {Eisenstein}, D.~J. and {Elsworth}, Y. and {Feuillet}, D. and {Fleming}, S.~W. and {Galbraith-Frew}, J. and {Garcia}, R.~A. and {Anibal Garcia-Hernandez}, D. and {Gillespie}, B.~A. and {Girardi}, L. and {Gunn}, J.~E. and {Hasselquist}, S. and {Hayden}, M.~R. and {Hekker}, S. and {Ivans}, I. and {Kinemuchi}, K. and {Klaene}, M. and {Mahadevan}, S. and {Mathur}, S. and {Mosser}, B. and {Muna}, D. and {Munn}, J.~A. and {Nichol}, R.~C. and {O'Connell}, R.~W. and {Robin}, A.~C. and {Rocha-Pinto}, H. and {Schultheis}, M. and {Serenelli}, A.~M. and {Shane}, N. and {Silva Aguirre}, V. and {Sobeck}, J.~S. and {Thompson}, B. and {Troup}, N.~W. and {Weinberg}, D.~H. and {Zamora}, O.},
-	Date-Added = {2017-08-12 10:01:53 +0000},
-	Date-Modified = {2017-08-12 10:01:54 +0000},
-	Eprint = {1509.05420},
-	Journal = {ArXiv e-prints},
-	Keywords = {Astrophysics - Instrumentation and Methods for Astrophysics, Astrophysics - Astrophysics of Galaxies},
-	Month = sep,
-	Primaryclass = {astro-ph.IM},
-	Title = {{The Apache Point Observatory Galactic Evolution Experiment (APOGEE)}},
-	Year = 2015}
-
-@article{Garcia-Perez:2016,
+@article{ASPCAP,
 	Adsnote = {Provided by the SAO/NASA Astrophysics Data System},
 	Adsurl = {http://adsabs.harvard.edu/abs/2016AJ....151..144G},
 	Archiveprefix = {arXiv},
 	Author = {{Garc{\'{\i}}a P{\'e}rez}, A.~E. and {Allende Prieto}, C. and {Holtzman}, J.~A. and {Shetrone}, M. and {M{\'e}sz{\'a}ros}, S. and {Bizyaev}, D. and {Carrera}, R. and {Cunha}, K. and {Garc{\'{\i}}a-Hern{\'a}ndez}, D.~A. and {Johnson}, J.~A. and {Majewski}, S.~R. and {Nidever}, D.~L. and {Schiavon}, R.~P. and {Shane}, N. and {Smith}, V.~V. and {Sobeck}, J. and {Troup}, N. and {Zamora}, O. and {Weinberg}, D.~H. and {Bovy}, J. and {Eisenstein}, D.~J. and {Feuillet}, D. and {Frinchaboy}, P.~M. and {Hayden}, M.~R. and {Hearty}, F.~R. and {Nguyen}, D.~C. and {O'Connell}, R.~W. and {Pinsonneault}, M.~H. and {Wilson}, J.~C. and {Zasowski}, G.},
 	Date-Added = {2017-08-12 10:00:05 +0000},
-	Date-Modified = {2017-08-12 10:00:06 +0000},
+	Date-Modified = {2018-02-20 17:50:41 +0000},
 	Doi = {10.3847/0004-6256/151/6/144},
 	Eid = {144},
 	Eprint = {1510.07635},
