--- a/notebooks/figures/Numbers of visits and sample overview.ipynb
+++ b/notebooks/figures/Numbers of visits and sample overview.ipynb
@@ -128,7 +128,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "res = np.array(session.query(AllStar.logg, AllStar.teff, AllStar.fe_h).all())\n",
@@ -147,6 +149,7 @@
     "axes[0].set_yscale('log')\n",
     "axes[0].set_xlabel(r'[Fe/H]')\n",
     "axes[0].set_ylabel(r'$N$')\n",
+    "axes[0].xaxis.set_ticks([-3, -2, -1, 0, 1])\n",
     "\n",
     "c = axes[1].scatter(teff, logg, c=feh, marker='.', alpha=0.2, \n",
     "                    linewidth=0, vmin=-1, vmax=0.75, \n",
@@ -155,6 +158,7 @@
     "axes[1].set_ylim(4.5, -0.5)\n",
     "axes[1].set_xlabel(r'$T_{\\rm eff}$ [K]')\n",
     "axes[1].set_ylabel(r'$\\log g$')\n",
+    "axes[1].xaxis.set_ticks(np.arange(3500, 6000+1, 500))\n",
     "\n",
     "fig.tight_layout()\n",
     "fig.subplots_adjust(right=0.82)\n",
