--- a/paper/1-catalog/refs.bib
+++ b/paper/1-catalog/refs.bib
@@ -2,12 +2,45 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Adrian Price-Whelan at 2018-02-20 14:50:53 -0500 
+%% Created for Adrian Price-Whelan at 2018-02-20 16:39:52 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{Goodman:2010,
+	Adsnote = {Provided by the SAO/NASA Astrophysics Data System},
+	Adsurl = {http://adsabs.harvard.edu/abs/2010CAMCS...5...65G},
+	Author = {{Goodman}, J. and {Weare}, J.},
+	Date-Added = {2018-02-20 21:39:49 +0000},
+	Date-Modified = {2018-02-20 21:39:51 +0000},
+	Doi = {10.2140/camcos.2010.5.65},
+	Journal = {Communications in Applied Mathematics and Computational Science, Vol.~5, No.~1, p.~65-80, 2010},
+	Keywords = {Markov chain Monte Carlo, affine invariance, ensemble samplers},
+	Pages = {65-80},
+	Title = {{Ensemble samplers with affine invariance}},
+	Volume = 5,
+	Year = 2010,
+	Bdsk-Url-1 = {https://dx.doi.org/10.2140/camcos.2010.5.65}}
+
+@article{Foreman-Mackey:2013,
+	Adsnote = {Provided by the SAO/NASA Astrophysics Data System},
+	Adsurl = {http://adsabs.harvard.edu/abs/2013PASP..125..306F},
+	Archiveprefix = {arXiv},
+	Author = {{Foreman-Mackey}, D. and {Hogg}, D.~W. and {Lang}, D. and {Goodman}, J.},
+	Date-Added = {2018-02-20 21:38:23 +0000},
+	Date-Modified = {2018-02-20 21:38:23 +0000},
+	Doi = {10.1086/670067},
+	Eprint = {1202.3665},
+	Journal = {\pasp},
+	Month = mar,
+	Pages = {306-312},
+	Primaryclass = {astro-ph.IM},
+	Title = {{emcee: The MCMC Hammer}},
+	Volume = 125,
+	Year = 2013,
+	Bdsk-Url-1 = {http://dx.doi.org/10.1086/670067}}
 
 @article{Kipping:2013,
 	Adsnote = {Provided by the SAO/NASA Astrophysics Data System},
