more refs and text

--- a/paper/1-catalog/refs.bib
+++ b/paper/1-catalog/refs.bib
@@ -2,12 +2,51 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Adrian Price-Whelan at 2018-02-20 16:39:52 -0500 
+%% Created for Adrian Price-Whelan at 2018-02-20 16:54:05 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{Foreman-Mackey:2014,
+	Adsnote = {Provided by the SAO/NASA Astrophysics Data System},
+	Adsurl = {http://adsabs.harvard.edu/abs/2014ApJ...795...64F},
+	Archiveprefix = {arXiv},
+	Author = {{Foreman-Mackey}, D. and {Hogg}, D.~W. and {Morton}, T.~D.},
+	Date-Added = {2018-02-20 21:54:04 +0000},
+	Date-Modified = {2018-02-20 21:54:04 +0000},
+	Doi = {10.1088/0004-637X/795/1/64},
+	Eid = {64},
+	Eprint = {1406.3020},
+	Journal = {\apj},
+	Keywords = {catalogs, methods: data analysis, methods: statistical, planetary systems, stars: statistics},
+	Month = nov,
+	Pages = {64},
+	Primaryclass = {astro-ph.EP},
+	Title = {{Exoplanet Population Inference and the Abundance of Earth Analogs from Noisy, Incomplete Catalogs}},
+	Volume = 795,
+	Year = 2014,
+	Bdsk-Url-1 = {http://dx.doi.org/10.1088/0004-637X/795/1/64}}
+
+@article{Hogg:2010,
+	Adsnote = {Provided by the SAO/NASA Astrophysics Data System},
+	Adsurl = {http://adsabs.harvard.edu/abs/2010ApJ...725.2166H},
+	Archiveprefix = {arXiv},
+	Author = {{Hogg}, D.~W. and {Myers}, A.~D. and {Bovy}, J.},
+	Date-Added = {2018-02-20 21:53:59 +0000},
+	Date-Modified = {2018-02-20 21:53:59 +0000},
+	Doi = {10.1088/0004-637X/725/2/2166},
+	Eprint = {1008.4146},
+	Journal = {\apj},
+	Keywords = {binaries: general, methods: data analysis, methods: statistical, planetary systems, planets and satellites: fundamental parameters, stars: kinematics and dynamics},
+	Month = dec,
+	Pages = {2166-2175},
+	Primaryclass = {astro-ph.SR},
+	Title = {{Inferring the Eccentricity Distribution}},
+	Volume = 725,
+	Year = 2010,
+	Bdsk-Url-1 = {http://dx.doi.org/10.1088/0004-637X/725/2/2166}}
 
 @article{Goodman:2010,
 	Adsnote = {Provided by the SAO/NASA Astrophysics Data System},
