--- a/paper/1-catalog/twoface-catalog.tex
+++ b/paper/1-catalog/twoface-catalog.tex
@@ -616,15 +616,8 @@ Catalog.
 
 Some highlights from this catalog.
 
-\subsection{Differences in companions of RC and RGB stars}
-\label{sec:rc-rgb}
-
-\todo{APW}
-
-\subsection{Trends in RGB companions with chemical abundances}
-\label{sec:rgb-chemistry}
-
-\todo{APW}
+% \subsection{Differences in companions of RC and RGB stars}
+% \label{sec:rc-rgb}
 
 \section{Discussion}
 
@@ -656,7 +649,7 @@ This research utilized the following open-source \python\ packages:
     \package{sqlalchemy} (\url{https://www.sqlalchemy.org/}).
 }
 
-\facility{\sdssiii, \apogee}
+\facility{\sdssiv, \apogee}
 
 \bibliographystyle{aasjournal}
 \bibliography{refs}
