--- a/notebooks/figures/Numbers of visits and sample overview.ipynb
+++ b/notebooks/figures/Numbers of visits and sample overview.ipynb
@@ -154,11 +154,11 @@
     "c = axes[1].scatter(teff, logg, c=feh, marker='.', alpha=0.2, \n",
     "                    linewidth=0, vmin=-1, vmax=0.75, \n",
     "                    cmap='RdYlBu_r', s=8, rasterized=True)\n",
-    "axes[1].set_xlim(6000, 3500)\n",
+    "axes[1].set_xlim(5600, 3600)\n",
     "axes[1].set_ylim(4.5, -0.5)\n",
     "axes[1].set_xlabel(r'$T_{\\rm eff}$ [K]')\n",
     "axes[1].set_ylabel(r'$\\log g$')\n",
-    "axes[1].xaxis.set_ticks(np.arange(3500, 6000+1, 500))\n",
+    "axes[1].xaxis.set_ticks(np.arange(4000, 5500+1, 500))\n",
     "\n",
     "fig.tight_layout()\n",
     "fig.subplots_adjust(right=0.82)\n",
@@ -183,7 +183,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [],
    "source": [
