--- a/notebooks/figures/Compare Troup.ipynb
+++ b/notebooks/figures/Compare Troup.ipynb
@@ -3,7 +3,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import os\n",
@@ -12,8 +14,10 @@
     "# Third-party\n",
     "from astropy.io import ascii, fits\n",
     "import astropy.coordinates as coord\n",
+    "from astropy.time import Time\n",
     "import astropy.units as u\n",
     "import matplotlib as mpl\n",
+    "from matplotlib.gridspec import GridSpec\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "%matplotlib inline\n",
@@ -29,7 +33,9 @@
     "                        StarResult, Status, JokerRun, initialize_db)\n",
     "from twoface.data import APOGEERVData\n",
     "from twoface.plot import plot_data_orbits\n",
-    "from twoface.mass import m2_func"
+    "from twoface.mass import m2_func\n",
+    "\n",
+    "from twobody import KeplerOrbit"
    ]
   },
   {
@@ -40,8 +46,6 @@
    },
    "outputs": [],
    "source": [
-    "TWOFACE_CACHE_PATH = path.abspath('../cache/')\n",
-    "\n",
     "Session, _ = db_connect(path.join(TWOFACE_CACHE_PATH, 'apogee.sqlite'))\n",
     "session = Session()\n",
     "\n",
@@ -51,12 +55,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "troup = ascii.read('../../papers/thejoker-paper/data/troup16-dr12.csv', format='commented_header')"
+    "troup = ascii.read('../../../papers/thejoker-paper/data/troup16-dr12.csv', format='commented_header')"
    ]
   },
   {
@@ -88,17 +90,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Troup stars are missing from our DR14 because visits get excluded from PERSIST issues:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "star = session.query(AllStar).filter(AllStar.apogee_id == not_in[5]).limit(1).one()\n",
-    "star.nvisits"
+    "Q: Why aren't all Troup stars in our sample? \n",
+    "\n",
+    "A: logg cut"
    ]
   },
   {
@@ -121,7 +115,7 @@
    },
    "outputs": [],
    "source": [
-    "allvisit = fits.getdata('/Users/adrian/data/APOGEE_DR14/allVisit-l31c.2.fits')"
+    "# allvisit = fits.getdata('/Users/adrian/data/APOGEE_DR14/allVisit-l31c.2.fits')"
    ]
   },
   {
@@ -130,8 +124,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "visits = allvisit[allvisit['APOGEE_ID'] == star.apogee_id]\n",
-    "visits['STARFLAGS']"
+    "# visits = allvisit[allvisit['APOGEE_ID'] == star.apogee_id]\n",
+    "# visits['STARFLAGS']"
    ]
   },
   {
@@ -139,27 +133,6 @@
    "metadata": {},
    "source": [
     "---"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "from twobody import KeplerOrbit\n",
-    "from astropy.time import Time"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "troup_row"
    ]
   },
   {
@@ -194,7 +167,7 @@
    },
    "outputs": [],
    "source": [
-    "plot_path = '../plots/troup-compare'\n",
+    "plot_path = '../../plots/troup-compare/'\n",
     "if not path.exists(plot_path):\n",
     "    os.makedirs(plot_path)"
    ]
@@ -203,7 +176,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "scrolled": false
+    "scrolled": true
    },
    "outputs": [],
    "source": [
@@ -217,29 +190,33 @@
     "        \n",
     "        troup_row = troup[troup['APOGEE_ID'] == apogee_id]\n",
     "        \n",
-    "        fig, axes = plt.subplots(1, 2, figsize=(12, 5))\n",
-    "        \n",
-    "        ax = axes[0]\n",
-    "        ax.scatter(samples['P'].to(u.day).value, samples['e'], \n",
-    "                   marker='.', alpha=0.5, label='The Joker')\n",
-    "        ax.scatter(troup_row['PERIOD'], troup_row['ECC'], \n",
-    "                   marker='+', linewidth=2., s=100, color='tab:orange', \n",
-    "                   label='Troup')\n",
-    "        ax.legend(loc='upper left')\n",
-    "        ax.set_xscale('log')\n",
-    "        ax.set_xlim(1, 3E4)\n",
-    "        ax.set_ylim(0, 1)\n",
-    "        ax.set_xlabel('$P$ [{0:latex_inline}]'.format(u.day))\n",
-    "        ax.set_ylabel('$e$')\n",
-    "        \n",
-    "        ax = axes[1]\n",
-    "        plot_data_orbits(data, samples, xlim_choice='tight', ax=ax)\n",
+    "        # plot\n",
+    "        fig = plt.figure(figsize=(15, 5))\n",
+    "        gs = GridSpec(1, 3)\n",
+    "        ax1 = fig.add_subplot(gs[:2])\n",
+    "        ax2 = fig.add_subplot(gs[2])\n",
+    "\n",
+    "        fig = plot_data_orbits(data, samples, ax=ax1, xlim_choice='tight')\n",
     "        orb2 = troup_to_orbit(troup_row)\n",
-    "        t2 = Time(np.linspace(*ax.get_xlim(), 10000), format='mjd')\n",
-    "        ax.plot(t2.mjd, orb2.radial_velocity(t2).to(u.km/u.s), marker='', color='tab:orange', alpha=0.5)\n",
+    "        t2 = Time(np.linspace(*ax1.get_xlim(), 10000), format='mjd')\n",
+    "        ax1.plot(t2.mjd, orb2.radial_velocity(t2).to(u.km/u.s), \n",
+    "                 marker='', color='tab:orange', alpha=0.5)\n",
+    "        ax1.set_title(star.apogee_id)\n",
+    "        \n",
+    "\n",
+    "        ax2.scatter(samples['P'].to(u.day).value, samples['e'], \n",
+    "                    marker='.', alpha=0.5)\n",
+    "        ax2.scatter(troup_row['PERIOD'], troup_row['ECC'], \n",
+    "                    marker='+', linewidth=2., s=100, color='tab:orange', \n",
+    "                    label='Troup')\n",
+    "        \n",
+    "        ax2.set_xscale('log', basex=2)\n",
+    "        ax2.set_xlim(0.5, 2**15)\n",
+    "        ax2.set_ylim(0, 1)\n",
+    "        ax2.xaxis.set_ticks(2**np.arange(0, 15+1, 3));\n",
     "        \n",
     "        fig.tight_layout()\n",
-    "        fig.savefig(path.join(plot_path, '{0}.png'.format(apogee_id)), dpi=256)\n",
+    "        fig.savefig(path.join(plot_path, '{0}.png'.format(apogee_id)), dpi=250)\n",
     "        plt.close(fig)"
    ]
   },
@@ -400,9 +377,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:twoface-new]",
+   "display_name": "Python [conda env:twoface]",
    "language": "python",
-   "name": "conda-env-twoface-new-py"
+   "name": "conda-env-twoface-py"
   },
   "language_info": {
    "codemirror_mode": {
